--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "gulp",
     "build": "gulp build",
-    "cz": "npm exec git-cz"
+    "cz": "npm exec git-cz",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.16.4",
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
+    "gh-pages": "^4.0.0",
     "git-cz": "^4.8.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
